feat: refactor interaction routes and handlers to use userID and profileID in path parameters
