# modules/user-management/feature/interaction-dislike/interaction-dislike.handler.ts
@@ -1,4 +1,5 @@
 import { Request, Response } from "express";
+import { Types } from "mongoose";
 
 import { catchErrors } from "../../../../shared/middleware";
 import { InteractionRepository } from "../../infrastructure/repository/interaction.repository";
@@ -6,15 +7,18 @@ import { interactionDislikeBodyValidator } from "./interaction-dislike.validator
 
 export const interactionDislikeHandler = catchErrors(
   async (req: Request, res: Response) => {
-    const body = interactionDislikeBodyValidator.parse(req.body);
+    const body = interactionDislikeBodyValidator.parse({
+      params: req.params,
+      ...req.body,
+    });
+    const userId = body.params.userID as unknown as Types.ObjectId;
+    const profileId = body.params.profileID as unknown as Types.ObjectId;
 
-    const payload = body.dislikedIds.map((to) => ({
-      from: body.from,
-      to,
-      type: "dislike" as const,
-    }));
-
-    await InteractionRepository.bulkCreateInteraction(payload);
-    res.status(200).json({ message: "Interaction recorded" });
+    await InteractionRepository.createInteraction({
+      from: userId,
+      to: profileId,
+      type: "dislike",
+    });
+    res.status(200).json({ message: "Profile disliked!" });
   },
 );
