# modules/user-management/feature/interaction-dislike/interaction-dislike.route.ts
@@ -4,6 +4,6 @@ import { interactionDislikeHandler } from "./interaction-dislike.handler";
 
 const router = Router();
 
-router.post("/dislike", interactionDislikeHandler);
+router.post("/:userID/dislike/:profileID", interactionDislikeHandler);
 
 export default router;
