# modules/user-management/feature/interaction-like/interaction-like.route.ts
@@ -4,6 +4,6 @@ import { interactionLikeHandler } from "./interaction-like.handler";
 
 const router = Router();
 
-router.post("/like", interactionLikeHandler);
+router.post("/:userID/like/:profileID", interactionLikeHandler);
 
 export default router;
